--- a/webview-gm-ui/src/main/res/layout/edit_script.xml
+++ b/webview-gm-ui/src/main/res/layout/edit_script.xml
@@ -10,10 +10,10 @@
         android:layout_height="wrap_content"
         android:text="@string/save_script" />
 
-    <EditText
+    <WebView
         android:id="@+id/script_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:inputType="textLongMessage|textMultiLine|textNoSuggestions"
         android:text="" />
 
